--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div class="d-flex p-1">
                     <img src="./img/logo-01.svg" height="55px" />
                     <h1>
-                        <a href="#intro" class="scrollto">idear<span class="color-idear">humano</span></a
+                        <a href="#intro" class="scrollto">IDEAR<span class="color-idear">HUMANO</span></a
               >
             </h1>
           </div>
@@ -56,6 +56,10 @@
                         <li><a href="#services">Servicios</a></li>
                         <li><a href="#team">Equipo</a></li>
                         <li><a href="busquedas.html">Búsquedas</a></li>
+                        <li>
+                            <a class="menu-active menu-item" href=" https://hiringroom.com/jobs/get_vacancy/5dc314839aab466917d39e8f/candidates/new">Cargar Cv</a
+              >
+            </li>
                         <li><a href="#contact">Contacto</a></li>
                         </ul>
                         </nav>
@@ -150,7 +154,7 @@
                                     <i class="ion-ios-speedometer-outline"></i>
                                 </div> -->
                             </div>
-                            <h2 class="title"><a href="#">Nuestra misión</a></h2>
+                            <h2 class="title"><a href="#">Nuestra Misión</a></h2>
                             <p>
                                 Ser una consultora global de atracción de talentos en tecnología, líder en Argentina para el mundo. </p>
                         </div>
@@ -227,27 +231,27 @@
                 </div>
             </div>
         </section>
-        <section id="moreservices" class="position-relative">
-            <div class="container">
+        <section id="moreservices" class="position-relative my-2">
+            <div class="container mb-5">
                 <header class="section-header wow fadeInUp otrosServicios">
                     <h4>También ofrecemos</h4>
 
                 </header>
 
                 <div class="masServicios">
-                    <img class="img1" src="./img/circles-01.png" />
-                    <img class="img2" src="./img/circles-02.png" />
-                    <div class="servicioChico  wow fadeInUp"><span>Diseño equipo de People Operations </span></div>
-                    <div class="servicioChico  wow fadeInUp"><span>Encuestas de Satisfacción Onboarding y Clima</span></div>
-                    <div class="servicioChico  wow fadeInUp"><span>Diseño de Documentos Cultural Fit de la empresa y mecánicas inter equipos
+                    <!-- <img class="img1" src="./img/circles-01.png" />
+                    <img class="img2" src="./img/circles-02.png" /> -->
+                    <div class="servicioChico mb-4  wow fadeInUp"><span>Diseño equipo de People Operations </span></div>
+                    <div class="servicioChico mb-4  wow fadeInUp"><span>Encuestas de Satisfacción Onboarding y Clima</span></div>
+                    <div class="servicioChico mb-4  wow fadeInUp"><span>Diseño de Documentos Cultural Fit de la empresa y mecánicas inter equipos
                     </span></div>
-                    <div class="servicioChico  wow fadeInUp"><span>Planes de Capacitación </span></div>
-                    <div class="servicioChico  wow fadeInUp"><span>Diseño de Organigrama, bandas salariales y career path por área.
+                    <div class="servicioChico mb-4  wow fadeInUp"><span>Planes de Capacitación </span></div>
+                    <div class="servicioChico  mb-4 wow fadeInUp"><span>Diseño de Organigrama, bandas salariales y career path por área.
                     </span></div>
-                    <div class="servicioChico wow fadeInUp"><span>Performance Review y Coaching Plan a implementar por los líderes de área y Team leaders </span></div>
-                    <div class="servicioChico  wow fadeInUp"><span>Estandarización, procesos y procedimientos del área </span></div>
-                    <div class="servicioChico  wow fadeInUp"><span>Colaborar con la Definición de los OKRs del área de RRHH, contribuir activamente para lograr los objetivos y KRs definidos.</span></div>
-                    <div class="servicioChico  wow fadeInUp"><span>Desarrollo, implementación de Plan de Beneficios.</span></div>
+                    <div class="servicioChico mb-4 wow fadeInUp"><span>Performance Review y Coaching Plan a implementar por los líderes de área y Team leaders </span></div>
+                    <div class="servicioChico  mb-4 wow fadeInUp"><span>Estandarización, procesos y procedimientos del área </span></div>
+                    <div class="servicioChico  mb-4 wow fadeInUp"><span>Colaborar con la Definición de los OKRs del área de RRHH, contribuir activamente para lograr los objetivos y KRs definidos.</span></div>
+                    <div class="servicioChico  mb-4 wow fadeInUp"><span>Desarrollo, implementación de Plan de Beneficios.</span></div>
 
                 </div>
             </div>
@@ -361,8 +365,8 @@
                     <div class="row d-flex justify-content-center">
                         <div class="col-lg-3 col-md-6 wow fadeInUp">
                             <div class="member">
-                                <img src="img/team-1.jpg" class="img-fluid" alt="" />
-                                <div class="member-info">
+                                <img src="img/team-1.jpg" class="img-fluid img-team" alt="" />
+                                <div class="member-info img-team">
                                     <div class="member-info-content">
                                         <h4>Mariana</h4>
                                         <span>CEO 
@@ -373,12 +377,22 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="member-info img-team mobile">
+                                <div class="member-info-content">
+                                    <h4>Mariana</h4>
+                                    <span>CEO 
+                                        
+
+                                </span>
+
+                                </div>
+                            </div>
                         </div>
 
                         <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                             <div class="member">
-                                <img src="img/team-2.jpg" class="img-fluid" alt="" />
-                                <div class="member-info">
+                                <img src="img/team-2.jpg" class="img-fluid img-team" alt="" />
+                                <div class="member-info img-team">
                                     <div class="member-info-content">
                                         <h4>Luciana</h4>
                                         <span>Team Leader Recruiter</span>
@@ -386,12 +400,19 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="member-info img-team mobile">
+                                <div class="member-info-content">
+                                    <h4>Luciana</h4>
+                                    <span>Team Leader Recruiter</span>
+
+                                </div>
+                            </div>
                         </div>
 
                         <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
                             <div class="member">
-                                <img src="img/team-3.jpg" class="img-fluid" alt="" />
-                                <div class="member-info">
+                                <img src="img/team-3.jpg" class="img-fluid img-team" alt="" />
+                                <div class="member-info img-team">
                                     <div class="member-info-content">
                                         <h4>Tomas</h4>
                                         <span>IT Recruiter</span>
@@ -399,12 +420,19 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="member-info img-team mobile">
+                                <div class="member-info-content">
+                                    <h4>Tomas</h4>
+                                    <span>IT Recruiter</span>
+
+                                </div>
+                            </div>
                         </div>
 
-                        <!-- <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+                        <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                             <div class="member">
-                                <img src="img/team-4.jpg" class="img-fluid" alt="" />
-                                <div class="member-info">
+                                <img src="img/team-4.jpg" class="img-fluid img-team" alt="" />
+                                <div class="member-info img-team">
                                     <div class="member-info-content">
                                         <h4>Emiliano</h4>
                                         <span>IT Recruiter | Web developer </span>
@@ -412,7 +440,14 @@
                                     </div>
                                 </div>
                             </div>
-                        </div> -->
+                            <div class="member-info img-team mobile">
+                                <div class="member-info-content">
+                                    <h4>Emiliano</h4>
+                                    <span>IT Recruiter | Web developer </span>
+
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </section>
@@ -440,15 +475,17 @@
                     </div> -->
                         <div class="col-md-4">
                             <div class="contact-email">
-                                <a href="https://api.whatsapp.com/send?phone=+5493515509744&text=Hola.Estamos buscando mejorar nuestro equipo!"> <img src="./img/whatsapp.png" class="whatsapp"></a>
-                                <h3>WhatsApp</h3>
+                                <a href="https://api.whatsapp.com/send?phone=+5493515509744&text=Hola.Estamos buscando mejorar nuestro equipo!"> <img src="./img/whatsapp.png" class="whatsapp">
+                                    <h3>WhatsApp</h3>
+                                </a>
                                 <p><a href="https://api.whatsapp.com/send?phone=+5493515509744&text=Hola.Estamos buscando mejorar nuestro equipo!">+54 9 351 550 9744</a></p>
                             </div>
                         </div>
                         <div class="col-md-4">
                             <div class="contact-email">
-                                <i class="ion-ios-email-outline"></i>
-                                <h3>Email</h3>
+                                <a href="mailto:info@idearhumano.com.ar"> <i class="ion-ios-email-outline"></i>
+                                    <h3>Email</h3>
+                                </a>
                                 <p><a href="mailto:info@idearhumano.com.ar">info@idearhumano.com.ar</a></p>
                             </div>
                         </div>
@@ -456,33 +493,33 @@
                     <!-- <a href="https://api.whatsapp.com/send?phone=0123456789&text=Hola, Nececito mas informacion!">Envíanos un mensaje de WhatsApp</a>
                 <a href="whatsapp://send?text=Hola, Index.pe&phone=+12 346 678 910&abid=+12 346 678 910">+12 346 678 910</a> -->
 
-                    <!-- <div class="form">
-                    <div id="sendmessage">Your message has been sent. Thank you!</div>
-                    <div id="errormessage"></div>
-                    <form action="" method="post" role="form" class="contactForm">
-                        <div class="form-row">
-                            <div class="form-group col-md-6">
-                                <input type="text" name="name" class="form-control" id="name" placeholder="Nombre" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
+                    <div class="form">
+                        <!-- <div id="sendmessage">Your message has been sent. Thank you!</div> -->
+                        <!-- <div id="errormessage"></div> -->
+                        <form action="" method="post" role="form" class="contactForm">
+                            <div class="form-row">
+                                <div class="form-group col-md-6">
+                                    <input type="text" name="name" class="form-control" id="name" placeholder="Nombre" data-rule="minlen:4" data-msg="Minimo 4 caracteres" />
+                                    <div class="validation"></div>
+                                </div>
+                                <div class="form-group col-md-6">
+                                    <input type="email" class="form-control" name="email" id="email" placeholder="Email" data-rule="email" data-msg="Ingrese un mail válido" />
+                                    <div class="validation"></div>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <input type="text" class="form-control" name="subject" id="subject" placeholder="Asunto" data-rule="minlen:4" data-msg="Minimo 8 caracteres" />
                                 <div class="validation"></div>
                             </div>
-                            <div class="form-group col-md-6">
-                                <input type="email" class="form-control" name="email" id="email" placeholder="Email" data-rule="email" data-msg="Please enter a valid email" />
+                            <div class="form-group">
+                                <textarea class="form-control" name="message" id="message" rows="5" data-rule="required" data-msg="Escribe tu consulta" placeholder="Mensaje"></textarea>
                                 <div class="validation"></div>
                             </div>
-                        </div>
-                        <div class="form-group">
-                            <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
-                            <div class="validation"></div>
-                        </div>
-                        <div class="form-group">
-                            <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Mensaje"></textarea>
-                            <div class="validation"></div>
-                        </div>
-                        <div class="text-center">
-                            <button type="submit">Enviar mensaje</button>
-                        </div>
-                    </form>
-                </div> -->
+                            <div class="text-center">
+                                <a class='btn btn-green' id='btnWhataspp' href=''> Enviar whatsapp</a>
+                            </div>
+                        </form>
+                    </div>
                 </div>
             </section>
             <!-- #contact -->
@@ -528,6 +565,44 @@
 
     <!-- Template Main Javascript File -->
     <script src="js/main.js"></script>
+
+    <script>
+        function getWapp() {
+            let link = "https://api.whatsapp.com/send?phone=+5493515509744&text="
+            link += 'Nombre:%20' + $('#name').val().split(' ').join('%20') + '%0A'
+            link += 'Email:%20' + $('#email').val().split(' ').join('%20') + '%0A'
+            link += 'Asunto:%20' + $('#subject').val().split(' ').join('%20') + '%0A'
+            link += 'Mensaje:%20' + $('#message').val().split(' ').join('%20') + '%0A'
+
+            $('#btnWhataspp').attr('href', link)
+
+        }
+
+        $('#name').change(function() {
+
+            getWapp()
+        })
+
+        $('#email').change(function() {
+            getWapp()
+        })
+
+
+        $('#subject').change(function() {
+            getWapp()
+        })
+
+
+        $('#message').change(function() {
+            getWapp()
+        })
+    </script>
 </body>
 
 </html>
+
+
+<!-- https://www.shutterstock.com/image-photo/developing-programming-coding-technologies-website-design-626435660 -->
+<!-- https://www.shutterstock.com/image-photo/profile-side-view-his-he-nice-1451794139 -->
+<!-- https://www.shutterstock.com/es/image-illustration/abstract-futuristic-infographic-visual-data-complexity-746652745 -->
+<!-- https://www.shutterstock.com/image-photo/smart-city-abstract-dot-point-connect-1499306735 -->
