--- a/busquedas.html
+++ b/busquedas.html
@@ -42,7 +42,7 @@
                 <div class="d-flex p-1">
                     <img src="./img/logo-01.svg" height="55px" />
                     <h1>
-                        <a href="#intro" class="scrollto">idear<span class="color-idear">humano</span></a
+                        <a href="#intro" class="scrollto">IDEAR<span class="color-idear">HUMANO</span></a
               >
             </h1>
           </div>
@@ -58,6 +58,14 @@
                             <a class="menu-active menu-item-active" href="#Busquedas">Búsquedas</a
               >
             </li>
+            <li>
+              <a
+                class="menu-active menu-item"
+                href=" https://hiringroom.com/jobs/get_vacancy/5dc314839aab466917d39e8f/candidates/new"
+                >Cargar Cv</a
+              >
+            </li>
+
             <li><a href="index.html#contact">Contacto</a></li>
                         </ul>
                         </nav>
@@ -115,11 +123,21 @@
     <script src="lib/touchSwipe/jquery.touchSwipe.min.js"></script>
     <!-- Contact Form JavaScript File -->
     <script src="contactform/contactform.js"></script>
-
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script> -->
     <script type="text/javascript" src="./js/embed.js"></script>
     <script>
         $(document).ready(function() {
             embed("5dc314829aab466917d39e8b");
+
+            $(".tabs-ih").click(function() {
+                debugger;
+                $(".tabs-ih").removeClass("active");
+                $(this).addClass("active");
+                var id = $(this).attr("id");
+                $(".tab-content-ih").hide();
+                $("#" + id + "C").show();
+            });
         });
 
         $("#inptBuscar").keyup(function() {
@@ -137,6 +155,8 @@
 
     <!-- Template Main Javascript File -->
     <script src="js/main.js"></script>
+
+    <script></script>
 </body>
 
 </html>
