--- a/index.html
+++ b/index.html
@@ -269,6 +269,7 @@
                         ¿Queres encontrar tu próximo trabajo?
                     </p>
                     <a class="cta-btn" href="busquedas.html">Mirá las búsquedas abiertas</a>
+
                 </div>
             </section>
             <!-- #call-to-action -->
@@ -277,18 +278,66 @@
             <!--==========================
       Clients Section
     ============================-->
-            <section id="clients" class="wow fadeInUp">
+            <!-- <section id="clients" class="wow fadeInUp">
                 <div class="container">
                     <header class="section-header">
                         <h3>Confían en nosotros</h3>
                     </header>
 
                     <div class="owl-carousel clients-carousel">
-                        <img src="img/clients/client-1.png" alt="" />
-                        <img src="img/clients/client-2.png" alt="" />
-                        <img src="img/clients/client-3.png" alt="" />
-                        <img src="img/clients/client-4.png" alt="" />
-                        <img src="img/clients/client-5.png" alt="" />
+                        <img src="img/clientes/client-1.png" alt="" />
+                        <img src="img/clientes/client-2.png" alt="" />
+                        <img src="img/clientes/client-3.png" alt="" />
+                        <img src="img/clientes/client-4.png" alt="" />
+                        <img src="img/clientes/client-5.png" alt="" />
+                        <img src="img/clientes/client-6.png" alt="" />
+                        <img src="img/clientes/client-7.png" alt="" />
+                        <img src="img/clientes/client-8.png" alt="" />
+                        <img src="img/clientes/client-9.png" alt="" />
+                        <img src="img/clientes/client-10.png" alt="" />
+                        <img src="img/clientes/client-11.png" alt="" />
+                        <img src="img/clientes/client-12.png" alt="" />
+                        <img src="img/clientes/client-13.png" alt="" />
+                        <img src="img/clientes/client-14.png" alt="" />
+                        <img src="img/clientes/client-15.png" alt="" />
+                        <img src="img/clientes/client-16.png" alt="" />
+                        <img src="img/clientes/client-17.png" alt="" />
+                        <img src="img/clientes/client-18.png" alt="" />
+
+                    </div>
+                </div>
+            </section> -->
+            <!-- #clients -->
+
+
+            <!--==========================
+      Clients Section
+    ============================-->
+            <section class="wow fadeInUp clientesSeccion">
+                <div class="container">
+                    <header class="section-header">
+                        <h3>Confían en nosotros</h3>
+                    </header>
+
+                    <div class="d-flex clientes" style="flex-wrap: wrap;justify-content: center;">
+                        <img src="img/clientes/client-1.png" alt="" />
+                        <img src="img/clientes/client-2.png" alt="" />
+                        <img src="img/clientes/client-3.png" alt="" />
+                        <img src="img/clientes/client-4.png" alt="" />
+                        <img src="img/clientes/client-5.png" alt="" />
+                        <img src="img/clientes/client-6.png" alt="" />
+                        <img src="img/clientes/client-7.png" alt="" />
+                        <img src="img/clientes/client-8.png" alt="" />
+                        <img src="img/clientes/client-9.png" alt="" />
+                        <img src="img/clientes/client-10.png" alt="" />
+                        <img src="img/clientes/client-11.png" alt="" />
+                        <img src="img/clientes/client-12.png" alt="" />
+                        <img src="img/clientes/client-13.png" alt="" />
+                        <img src="img/clientes/client-14.png" alt="" />
+                        <img src="img/clientes/client-15.png" alt="" />
+                        <img src="img/clientes/client-16.png" alt="" />
+                        <img src="img/clientes/client-17.png" alt="" />
+                        <img src="img/clientes/client-18.png" alt="" />
 
                     </div>
                 </div>
@@ -325,6 +374,17 @@
                                 <img src="img/quote-sign-right.png" class="quote-sign-right" alt="" />
                             </p>
                         </div>
+                        <div class="testimonial-item">
+                            <h3>Romina Cruceño</h3>
+                            <h4>HR Leader
+                            </h4>
+                            <p>
+                                <img src="img/quote-sign-left.png" class="quote-sign-left" alt="" /> Excelente! La experiencia fue placentera desde la reunión inicial. Trabajan con celeridad, orientados a resultados y con mucho profesionalismo
+
+                                <img src="img/quote-sign-right.png" class="quote-sign-right" alt="" />
+                            </p>
+                        </div>
+
 
                         <!-- <div class="testimonial-item">
                             <h3>Rojo Limon</h3>
@@ -532,11 +592,50 @@
 
         <div class="container">
             <div class="copyright">
-                &copy; Copyright <strong>BizPage</strong>. All Rights Reserved
+
             </div>
             <div class="credits">
+                <!-- Facebook -->
+                <i class="fab fa-facebook-f"></i>
 
-                Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+                <!-- Twitter -->
+                <i class="fab fa-twitter"></i>
+
+                <!-- Google -->
+                <i class="fab fa-google"></i>
+
+                <!-- Instagram -->
+                <i class="fab fa-instagram"></i>
+
+                <!-- Linkedin -->
+                <i class="fab fa-linkedin-in"></i>
+
+                <!-- Pinterest -->
+                <i class="fab fa-pinterest"></i>
+
+                <!-- Vkontakte -->
+                <i class="fab fa-vk"></i>
+
+                <!-- Stack overflow -->
+                <i class="fab fa-stack-overflow"></i>
+
+                <!-- Youtube -->
+                <i class="fab fa-youtube"></i>
+
+                <!-- Slack -->
+                <i class="fab fa-slack-hash"></i>
+
+                <!-- Github -->
+                <i class="fab fa-github"></i>
+
+                <!-- Dribbble -->
+                <i class="fab fa-dribbble"></i>
+
+                <!-- Reddit -->
+                <i class="fab fa-reddit-alien"></i>
+
+                <!-- Whatsapp -->
+                <i class="fab fa-whatsapp"></i>
             </div>
         </div>
     </footer>
