--- a/busquedas.html
+++ b/busquedas.html
@@ -71,7 +71,7 @@
                         </nav>
                 </div>
     </header>
-    <section id="Busquedas" style="margin-top: 7rem">
+    <section id="Busquedas" style="margin-top: 7rem; min-height: 80vh">
         <div class="container">
             <header class="section-header">
                 <h3>Búsquedas abiertas</h3>
@@ -85,7 +85,31 @@
             <!-- <div class="buscar">
                 <input type="text" placeholder="Buscar..." id="inptBuscar" class="inptBuscar" />
             </div> -->
-            <div id="embeded_code" class="vacantes"></div>
+
+            <ul class="nav nav-tabs" id="myTab" role="tablist" style="
+            display: flex;
+
+            justify-content: center;
+          ">
+                <li class="nav-item" role="presentation">
+                    <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home" type="button" role="tab" aria-controls="home" aria-selected="true">
+              Búsquedas It
+            </button>
+                </li>
+                <li class="nav-item" role="presentation">
+                    <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile" type="button" role="tab" aria-controls="profile" aria-selected="false">
+              Otros perfiles
+            </button>
+                </li>
+            </ul>
+            <div class="tab-content" id="myTabContent">
+                <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+                    <div id="embeded_code1" class="vacantes"></div>
+                </div>
+                <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+                    <div id="embeded_code" class="vacantes"></div>
+                </div>
+            </div>
         </div>
     </section>
     <!--==========================
@@ -122,6 +146,8 @@
     <script src="lib/lightbox/js/lightbox.min.js"></script>
     <script src="lib/touchSwipe/jquery.touchSwipe.min.js"></script>
     <!-- Contact Form JavaScript File -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
     <script src="contactform/contactform.js"></script>
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script> -->
@@ -155,8 +181,6 @@
 
     <!-- Template Main Javascript File -->
     <script src="js/main.js"></script>
-
-    <script></script>
 </body>
 
 </html>
